# HFS

./: README.md
dataset/: cvt_format_bsds.m  cvt_format_segs.m
linux/: CMakeLists.txt
linux/LibLinear/: CMakeLists.txt
linux/Segment/: CMakeLists.txt  CmFile.cpp  CmFile.h  CmIllu.h  DataSet.h  HFSSegment.cpp  HFSSegment.h  Stdafx.h  kernel.cu
linux/Segment/BSDSBench/: AllBench.cpp  Bench.h  BoundaryBench.cpp  CMakeLists.txt  RegionBench.cpp  Utils.cpp
linux/Segment/BSDSBench/source/: Matrix.cc  correspondPixels.cc  csa.cc  csa.hh  match.cc
linux/Segment/FelzenSegment/: CMakeLists.txt  disjoint-set.h  segment-image.h
linux/Segment/ORUtils/: CMakeLists.txt
linux/Segment/gSLIC/: gSLIC_defines.h
linux/Segment/gSLIC/engines/: gSLIC_core_engine.cpp  gSLIC_core_engine.h  gSLIC_seg_engine.cpp  gSLIC_seg_engine.h  gSLIC_seg_engine_GPU.cu  gSLIC_seg_engine_GPU.h  gSLIC_seg_engine_shared.h
linux/Segment/gSLIC/objects/: gSLIC_settings.h
windows/: Segment.sln
windows/LibLinear/: LibLinear.vcxproj  LibLinear.vcxproj.filters
windows/Segment/: CmFile.cpp  CmFile.h  CmIllu.h  HFSSegment.cpp  Magnitude.cu  Magnitude.h  Segment.vcxproj  Segment.vcxproj.filters  Stdafx.h  Texture.cpp  Texture.h  kernel.cu
windows/Segment/BSDSBench/: AllBench.cpp  Bench.h  BoundaryBench.cpp  RegionBench.cpp  Utils.cpp
windows/Segment/BSDSBench/source/: Exception.cc  Matrix.cc  Matrix.hh  Random.cc  Random.hh  String.cc  build.m  correspondPixels.mexw64  csa.hh  ieee_754.h  kofn.cc
windows/Segment/FelzenSegment/: convolve.h  filter.h  segment-image.cpp
windows/Segment/gSLIC/engines/: gSLIC_core_engine.cpp  gSLIC_seg_engine.cpp  gSLIC_seg_engine_GPU.cu
